# ufal-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_5_cases.py  test_jirik_full.py  test_live.py
.github/workflows/: ci.yml  release.yml
dev/ufal-mcp-stress-v076/: .gitignore  README.md
dev/ufal-mcp-stress-v076/corpus/: ULTIMATE_SPIS.txt
dev/ufal-mcp-stress-v076/corpus/multilingual/: ar.txt  de.txt  en.txt  es.txt  fr.txt  hi.txt  it.txt  pl.txt  ru.txt  sk.txt  uk.txt
dev/ufal-mcp-stress-v076/demo/: stress-report.md
dev/ufal-mcp-stress-v076/results/: BUGS-v076.md  ULTIMATE-TEST.md
dev/ufal-mcp-stress-v076/results/multilingual/: MULTILINGUAL-TEST.md
dev/ufal-mcp-stress-v076/runner/: analyze.py  cross_tool.py  multilingual_test.py  run_stress.py  stdio_client.py  test_cases.py  ultimate_test.py  verifiers.py
docs/: JOURNAL-2026-05-20.md
src/ufal_mcp/: __init__.py  http.py  korektor.py  langdetect.py  maskit.py  maskit_constants.py  maskit_parsing.py  maskit_patterns.py  maskit_placeholders.py  maskit_stoplist.py  maskit_strict.py  nametag.py  nametag_labels.py  ponk.py  server.py  translator.py  udpipe.py  validation.py
