[project]
name = "ufal-mcp"
version = "0.1.0"
description = "MCP server pro ÚFAL MFF UK NLP nástroje pro česká právní data (NameTag, MasKIT, PONK)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Michal Bürgermeister", email = "michalbugy12@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
ufal-mcp = "ufal_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ufal_mcp"]
